feat: replace live npc detection with static voice lookup table